# mlflow

./: --help  .Rbuildignore  .dockerignore  .env.dev.example  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .golangci.yml  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .safety-project.ini  .style.yapf  .travis.yml  3.1  =1.11.0  AGENTS.md  AI_GATEWAY_ARCHITECTURE.md  AI_GATEWAY_IMPROVEMENTS_PLAN.md  ARCHITECTURE_mlflow_export_import.md  BENCH_PR_BODY.md  CHANGELOG.md  CHANGELOG.rst  CHANGES.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  COMMITTER.md  CONTRIBUTING.md  CONTRIBUTING.rst  DESCRIPTION  Deployment-target.json  Dockerfile  Dockerfile.1.29.1.dev0  Dockerfile.2.0.0.dev0  Dockerfile.diff  (+201 more)
.claude/orchestrator/: README.md  app-manifest.yml  pyproject.toml
.claude/orchestrator/agents/: issue-spotter.md  mlflow-reviewer.md
.claude/orchestrator/repo_knowledge/: helpers_exceptions.md  helpers_index.md  helpers_tracing_utils.md  helpers_types.md  helpers_utils.md
.claude/orchestrator/scripts/: generate_helpers_md.py
.claude/orchestrator/src/orchestrator/: __init__.py  __main__.py  agents.py  anthropic_client.py  cli.py  cluster.py  dedup.py  github_client.py  judges.py  orchestrator.py  posting.py
.claude/orchestrator/tests/: test_cluster.py  test_dedup.py
.claude/skills/: .gitignore  README.md  pyproject.toml
.claude/skills/add-review-comment/: SKILL.md
.claude/skills/analyze-ci/: SKILL.md  analyze_ci.py
.claude/skills/analyze-mlflow-trace/: SKILL.md
.claude/skills/compare-security-advisories/: SKILL.md
.claude/skills/copilot/: SKILL.md  approve.sh  poll.sh
.claude/skills/dedupe-security-advisories/: SKILL.md
.claude/skills/diagnose-ci/: SKILL.md  diagnose_ci.py
.claude/skills/draft-security-fix/: SKILL.md
.claude/skills/fetch-diff/: SKILL.md  fetch_diff.py
.claude/skills/fetch-logs/: SKILL.md  fetch_logs.py
.claude/skills/fetch-unresolved-comments/: SKILL.md  fetch_unresolved_comments.py
.claude/skills/list-security-advisories/: SKILL.md
.claude/skills/mlflow-eval/: SKILL.md
.claude/skills/mlflow-init/: SKILL.md
.claude/skills/pr-review/: SKILL.md  review-payload.schema.json
.claude/skills/resolve/: SKILL.md
.claude/skills/review-comment/: SKILL.md
.claude/skills/src/skills/: cli.py
.claude/skills/src/skills/commands/: analyze_ci.py  dedupe_advisories.py  fetch_diff.py  fetch_logs.py  fetch_unresolved_comments.py  get_advisory.py  list_advisories.py  load_rules.py  print_rules.py  validate_review.py  validate_ui_review.py  which_rules.py
.claude/skills/src/skills/github/: __init__.py  client.py  types.py  utils.py
.claude/skills/src/skills/utils/: __init__.py
.claude/skills/triage-security-advisory/: SKILL.md
.claude/skills/ui-review/: SKILL.md  ui-review-payload.schema.json
.claude/skills/validate-security-advisory/: SKILL.md
dev/clint/: README.md  pyproject.toml
dev/clint/src/clint/: __init__.py  __main__.py  builtin.py  comments.py  config.py  index.py  linter.py  noqa.py  resolver.py  rules.py  symbol_index.py  utils.py
dev/clint/src/clint/rules/: __init__.py  assign_before_append.py  base.py  (+65 more)
dev/clint/tests/: test_config.py  test_exclude_subdirectory.py  test_ignore_map.py  test_index.py  test_main_integration.py  test_resolve_paths.py
dev/clint/tests/rules/: conftest.py  test_assign_before_append.py  test_deprecation_warning_usage.py  test_do_not_disable.py  test_docstring_param_order.py  test_duplicate_import.py  test_empty_notebook_cell.py  test_example_syntax_error.py  test_except_bool_op.py  test_extraneous_docstring_param.py  test_forbidden_deprecation_warning.py  test_forbidden_make_judge_in_builtin_scorers.py  test_forbidden_set_active_model_usage.py  test_forbidden_top_level_import.py  test_forbidden_trace_child_merge.py  test_forbidden_trace_ui_in_notebook.py  test_get_artifact_uri.py  test_implicit_optional.py  test_incorrect_type_annotation.py  test_invalid_abstract_method.py  test_invalid_experimental_decorator.py  test_isinstance_union_syntax.py  test_lazy_builtin_import.py  test_lazy_import.py  test_lazy_module.py  test_log_model_artifact_path.py  test_markdown_link.py  test_missing_docstring_param.py  test_missing_notebook_h1_header.py  test_mlflow_class_name.py  test_mock_patch_as_decorator.py  test_mock_patch_dict_environ.py  test_multi_assign.py  test_nested_mock_patch.py  test_no_class_based_tests.py  test_no_docstring_in_tests.py  test_no_rst.py  test_no_shebang.py  test_os_chdir_in_test.py  test_os_chdir_in_test_edge_cases.py  (+28 more)
dev/flavors/: README.md  pyproject.toml
dev/flavors/src/flavors/: __init__.py  _cli.py  _lint.py  _loader.py  _matrix.py  _prune.py  _releases.py  _schema.py  _update.py
dev/flavors/tests/: test_cli.py  test_matrix.py  test_prune.py  test_update.py
dev/pypi/: README.md  pyproject.toml
dev/pypi/src/pypi/: __init__.py  _client.py  _models.py
dev/pypi/tests/: conftest.py  test_client.py  test_models.py
examples/llama_index/workflow/: README.md  Tutorial.ipynb  install.sh  pyproject.toml
examples/llama_index/workflow/data/: mlflow_qa_dataset.csv  urls.txt
examples/llama_index/workflow/workflow/: events.py  model.py  prompts.py  workflow.py
examples/uv-dependency-management/: log_model.py  pyproject.toml
kubernetes-workspace-provider/: README.md  pyproject.toml
kubernetes-workspace-provider/src/kubernetes_workspace_provider/: __init__.py  auth.py  provider.py
kubernetes-workspace-provider/tests/: test_auth.py  test_auth_fastapi.py  test_provider.py
libs/tracing/: LICENSE.txt  MANIFEST.in  README.md  mlflow  pyproject.toml
tests/resources/mlflow-test-plugin/: pyproject.toml  setup.py
tests/resources/mlflow-test-plugin/mlflow_test_plugin/: __init__.py  app.py  default_experiment_provider.py  dummy_backend.py  dummy_dataset.py  dummy_dataset_source.py  dummy_evaluator.py  fake_deployment_plugin.py  file_store.py  local_artifact.py  request_auth_provider.py  request_header_provider.py  run_context_provider.py  sql_store_alchemy.py  sqlalchemy_store.py
(+14426 files in other folders)
