[project]
name = "skills"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["aiohttp", "tiktoken", "claude-agent-sdk", "typing_extensions"]

[project.scripts]
skills = "skills.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skills"]
