[project]
name = "skills"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "aiohttp",
  "claude-agent-sdk",
  "pydantic",
  "tiktoken",
  "typing_extensions",
]

[project.scripts]
skills = "skills.cli:main"

[[tool.uv.index]]
name = "databricks-proxy"
url = "https://pypi-proxy.dev.databricks.com/simple/"
default = true
