[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "clint"
version = "0.1.0"
description = "A custom linter for mlflow to enforce rules that ruff doesn't cover."
readme = "README.md"
authors = [{ name = "mlflow", email = "mlflow@mlflow.com" }]
dependencies = ["tomli", "typing_extensions"]

[tool.setuptools]
package-dir = { "" = "src" }

[project.scripts]
clint = "clint:main"
