[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "clint"
version = "0.1.0"
description = "A custom linter for mlflow to enforce rules that ruff doesn't cover."
readme = "README.md"
authors = [{ name = "mlflow", email = "mlflow@mlflow.com" }]
dependencies = [
  "packaging>=25.0",
  "pytest>=8.4.2",
  "tomli",
  "typing_extensions",
]

[tool.setuptools]
package-dir = { "" = "src" }

[project.scripts]
clint = "clint:main"
