[project]
name = "flavors"
version = "0.1.0"
description = "CLI and shared helpers for cooking mlflow/ml-package-versions.yml."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["packaging", "pydantic>=2.0", "pypi", "pyyaml", "requests"]

[project.scripts]
flavors = "flavors._cli:main"

[dependency-groups]
dev = ["pytest"]

[tool.uv.sources]
pypi = { workspace = true }
