[project]
name = "pypi"
version = "0.1.0"
description = "A minimal client for fetching package metadata from PyPI."
readme = "README.md"
authors = [{ name = "mlflow", email = "mlflow@mlflow.com" }]
requires-python = ">=3.10"
dependencies = ["packaging"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pypi = ["py.typed"]
