[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlflow-tracing"
version = "3.1.4"
description = "MLflow Tracing SDK is an open-source, lightweight Python package that only includes the minimum set of dependencies and functionality to instrument your code/models/agents with MLflow Tracing."
readme = "README.md"
keywords = ["mlflow", "ai", "databricks", "observability", "monitoring"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Information Technology",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"
dependencies = [
  "cachetools<7,>=5.0.0",
  "databricks-sdk<1,>=0.20.0",
  "opentelemetry-api<3,>=1.9.0",
  "opentelemetry-sdk<3,>=1.9.0",
  "packaging<26",
  "protobuf<7,>=3.12.0",
  "pydantic<3,>=1.10.8",
]
[[project.maintainers]]
name = "Databricks"
email = "mlflow-oss-maintainers@googlegroups.com"

[project.license]
file = "LICENSE.txt"

[project.urls]
homepage = "https://mlflow.org"
issues = "https://github.com/mlflow/mlflow/issues"
documentation = "https://mlflow.org/docs/latest/index.html"
repository = "https://github.com/mlflow/mlflow"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "mlflow",
  # Flavors that we support auto tracing
  "mlflow.anthropic*",
  "mlflow.autogen*",
  "mlflow.bedrock*",
  "mlflow.crewai*",
  "mlflow.dspy*",
  "mlflow.gemini*",
  "mlflow.groq*",
  "mlflow.langchain*",
  "mlflow.litellm*",
  "mlflow.llama_index*",
  "mlflow.mistral*",
  "mlflow.openai*",
  # Other necessary modules
  "mlflow.azure*",
  "mlflow.entities*",
  "mlflow.environment_variables",
  "mlflow.exceptions",
  "mlflow.legacy_databricks_cli*",
  "mlflow.prompt*",
  "mlflow.protos*",
  "mlflow.pydantic_ai*",
  "mlflow.smolagents*",
  "mlflow.store*",
  "mlflow.tracing*",
  "mlflow.tracking*",
  "mlflow.types*",
  "mlflow.utils*",
  "mlflow.version",
]
exclude = [
  # Large proto files that are not needed in the package
  "mlflow/protos/databricks_artifacts_pb2.py",
  "mlflow/protos/databricks_filesystem_service_pb2.py",
  "mlflow/protos/databricks_uc_registry_messages_pb2.py",
  "mlflow/protos/databricks_uc_registry_service_pb2.py",
  "mlflow/protos/model_registry_pb2.py",
  "mlflow/protos/unity_catalog_oss_messages_pb2.py",
  "mlflow/protos/unity_catalog_oss_service_pb2.py",
  # Test files
  "tests",
  "tests.*",
]
