[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlflow-test-plugin"
version = "0.0.1"
description = "Test plugin for MLflow"
requires-python = ">=3.10"
# `dependencies` is commented out to avoid overriding editable installs during development.
# Uncomment it if you need MLflow to be automatically installed with this plugin.
# dependencies = ["mlflow"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mlflow_test_plugin", "mlflow_test_plugin.*"]

# Define a Tracking Store plugin for tracking URIs with scheme 'file-plugin'
[project.entry-points."mlflow.tracking_store"]
file-plugin = "mlflow_test_plugin.file_store:PluginFileStore"

# Define a ArtifactRepository plugin for artifact URIs with scheme 'file-plugin'
[project.entry-points."mlflow.artifact_repository"]
file-plugin = "mlflow_test_plugin.local_artifact:PluginLocalArtifactRepository"

# Define a RunContextProvider plugin. The entry point name for run context providers
# is not used, and so is set to the string "unused" here
[project.entry-points."mlflow.run_context_provider"]
unused = "mlflow_test_plugin.run_context_provider:PluginRunContextProvider"

# Define a DefaultExperimentProvider plugin. The entry point name for
# default experiment providers is not used, and so is set to the string "unused" here
[project.entry-points."mlflow.default_experiment_provider"]
unused = "mlflow_test_plugin.default_experiment_provider:PluginDefaultExperimentProvider"

# Define a RequestHeaderProvider plugin. The entry point name for request header providers
# is not used, and so is set to the string "unused" here
[project.entry-points."mlflow.request_header_provider"]
unused = "mlflow_test_plugin.request_header_provider:PluginRequestHeaderProvider"

# Define a RequestAuthProvider plugin. The entry point name for request auth providers
# is not used, and so is set to the string "unused" here
[project.entry-points."mlflow.request_auth_provider"]
unused = "mlflow_test_plugin.request_auth_provider:PluginRequestAuthProvider"

# Define a Model Registry Store plugin for tracking URIs with scheme 'file-plugin'
[project.entry-points."mlflow.model_registry_store"]
file-plugin = "mlflow_test_plugin.sqlalchemy_store:PluginRegistrySqlAlchemyStore"

# Define a MLflow Project Backend plugin called 'dummy-backend'
[project.entry-points."mlflow.project_backend"]
dummy-backend = "mlflow_test_plugin.dummy_backend:PluginDummyProjectBackend"

# Define a MLflow model deployment plugin for target 'faketarget'
[project.entry-points."mlflow.deployments"]
faketarget = "mlflow_test_plugin.fake_deployment_plugin"

# Define a MLflow model evaluator with name "dummy_evaluator"
[project.entry-points."mlflow.model_evaluator"]
dummy_evaluator = "mlflow_test_plugin.dummy_evaluator:DummyEvaluator"

# Define a custom MLflow application with name custom_app
[project.entry-points."mlflow.app"]
custom_app = "mlflow_test_plugin.app:custom_app"

# Define an MLflow dataset source called "dummy_source"
[project.entry-points."mlflow.dataset_source"]
dummy_source = "mlflow_test_plugin.dummy_dataset_source:DummyDatasetSource"

# Define an MLflow dataset constructor called "from_dummy"
[project.entry-points."mlflow.dataset_constructor"]
from_dummy = "mlflow_test_plugin.dummy_dataset:from_dummy"
